--- a/pages/drink.html
+++ b/pages/drink.html
@@ -5,30 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Negroni</title>
+    <title>Bartender's best friend</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link href="./css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="../css/style.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../img/coctel.png">
 </head>
 
 <body>
     <div class="container">
-        <header class="blog-header py-3">
+        <header class="blog-header py-3 m-0">
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="col-12 text-center">
-                    <a class="blog-header-logo text-dark" href="./index.html">Bartender's best friend</a>
+                    <a class="blog-header-logo text-dark" href=".index.html">
+                        <img src="../img/bfflogo.png" alt="Logo">
+                    </a>
                 </div>
             </div>
         </header>
         <div class="nav-scroller py-1 mb-2">
-            <nav class="nav d-flex justify-content-between">
-                <a class="p-2 link-secondary" href="#">Recetas</a>
-                <a class="p-2 link-secondary" href="#">Noticias</a>
-                <a class="p-2 link-secondary" href="#">Articulos</a>
-                <a class="p-2 link-secondary" href="#">Los basicos</a>
-                <a class="p-2 link-secondary" href="#">Sobre nosotros</a>
+            <nav class="nav d-flex justify-content-between navbar mx-0">
+                <a class="p-2 link-secondary navbarbuttons" href="#">Recetas</a>
+                <a class="p-2 link-secondary navbarbuttons" href="#">Noticias</a>
+                <a class="p-2 link-secondary navbarbuttons" href="#">Articulos</a>
+                <a class="p-2 link-secondary navbarbuttons" href="#">Los basicos</a>
+                <a class="p-2 link-secondary navbarbuttons" href="#">Sobre nosotros</a>
             </nav>
         </div>
 
@@ -39,15 +42,57 @@
             </div>
             <div class="col-lg-6">
                 <h1 class="display-5 fw-bold lh-1 mb-3">Negroni</h1>
-                <p class="lead">El Negroni es un cóctel de origen italiano preparado a base de Gin, Campari y Vermú rojo. Es uno de los combinados más famosos del mundo que fue inventado en 1919 por Fosco Scarselli, un barman florentino que atendía en el viejo café Cassoni. Casi por casualidad, cuando el conde Camillo Negroni le pidió que sustituyese la soda de su coctel americano habitual, por una ginebra, bebida de la que se había enamorado en uno de sus viajes a Londres, acababan de inventar uno de los cócteles más famosos y con más glamour de la historia.</p>
+                <p class="lead">El Negroni es un cóctel de origen italiano preparado a base de Gin, Campari y Vermú
+                    rojo. Es uno de los combinados más famosos del mundo que fue inventado en 1919 por Fosco Scarselli,
+                    un barman florentino que atendía en el viejo café Cassoni. Casi por casualidad, cuando el conde
+                    Camillo Negroni le pidió que sustituyese la soda de su coctel americano habitual, por una ginebra,
+                    bebida de la que se había enamorado en uno de sus viajes a Londres, acababan de inventar uno de los
+                    cócteles más famosos y con más glamour de la historia.</p>
             </div>
         </div>
     </div>
-    <footer class="footer mt-auto py-3 bg-light">
-        <div class="container">
-            <span class="text-muted">Hecho por Luca Ciriaco para Coderhouse.</span>
-        </div>
-    </footer>
+    <div class="container">
+        <footer class="py-5">
+            <div class="row">
+                <div class="col-7">
+                    <h5>Secciones</h5>
+                    <ul class="nav flex-column">
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Buscador</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Articulos</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Noticias</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Sobre nosotros</a></li>
+                    </ul>
+                </div>
+
+                <div class="col-4 offset-1">
+                    <form>
+                        <h5>Suscribite a nuestro newsletter</h5>
+                        <div class="d-flex w-100 gap-2">
+                            <label for="newsletter1" class="visually-hidden">Direccion de Email</label>
+                            <input id="newsletter1" type="text" class="form-control" placeholder="Direccion de Email">
+                            <button class="btn btn-primary boton" type="button">Suscribirse</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <div class="d-flex justify-content-between py-4 my-4 border-top">
+                <p>© 2022 Luca Ciriaco, hecho para Coderhouse.</p>
+                <ul class="list-unstyled d-flex">
+                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+                                <use xlink:href="#twitter"></use>
+                            </svg></a></li>
+                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+                                <use xlink:href="#instagram"></use>
+                            </svg></a></li>
+                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
+                                <use xlink:href="#facebook"></use>
+                            </svg></a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
