--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="./css/style.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../img/coctel.png">
 </head>
 
 <body>
     <div class="container">
-        <header class="blog-header py-3">
+        <header class="blog-header py-3 m-0">
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="col-12 text-center">
                     <a class="blog-header-logo text-dark" href=".index.html">
@@ -25,15 +26,15 @@
             </div>
         </header>
         <div class="nav-scroller py-1 mb-2">
-            <nav class="nav d-flex justify-content-between">
-                <a class="p-2 link-secondary" href="#">Recetas</a>
-                <a class="p-2 link-secondary" href="#">Noticias</a>
-                <a class="p-2 link-secondary" href="#">Articulos</a>
-                <a class="p-2 link-secondary" href="#">Los basicos</a>
-                <a class="p-2 link-secondary" href="#">Sobre nosotros</a>
+            <nav class="nav d-flex justify-content-between navbar mx-0">
+                <a class="p-2 link-secondary navbarbuttons" href="#">Recetas</a>
+                <a class="p-2 link-secondary navbarbuttons" href="#">Noticias</a>
+                <a class="p-2 link-secondary navbarbuttons" href="#">Articulos</a>
+                <a class="p-2 link-secondary navbarbuttons" href="#">Los basicos</a>
+                <a class="p-2 link-secondary navbarbuttons" href="#">Sobre nosotros</a>
             </nav>
         </div>
-        <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+        <div class="p-4 p-md-5 mb-4 text-white rounded banner">
             <div class="col-md-6 px-0">
                 <h1 class="display-4 fst-italic">Titulo de articulo promocionado</h1>
                 <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and
@@ -47,8 +48,56 @@
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Buscador de cocteles</h1>
-                    <p class="lead text-muted">Estos son los cocteles mas buscados por el momento.</p>
+                    <p class="lead text-muted">Buscar cocteles por ingredientes ,sabores ,temporadas, etc.</p>
                 </div>
+            </div>
+        </section>
+
+        <section>
+            <div class="container-fluid">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Tipo de bebida</th>
+                            <th>Gustos</th>
+                            <th>Estaciones</th>
+                            <th>Graduación alcoholica</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Espirituosa</td>
+                            <td>Dulce</td>
+                            <td>Verano</td>
+                            <td>Fuerte</td>
+                        </tr>
+                        <tr>
+                            <td>Licor</td>
+                            <td>Amargo</td>
+                            <td>Otoño</td>
+                            <td>Intermedio</td>
+                        </tr>
+                        <tr>
+                            <td>Vinos y champagnes</td>
+                            <td>Agridulce</td>
+                            <td>Invierno</td>
+                            <td>Suave</td>
+                        </tr>
+                        <tr>
+                            <td>Cervezas y cidras</td>
+                            <td>Acido</td>
+                            <td>Primavera</td>
+
+                        </tr>
+                        <tr>
+                            <td>Mezclas</td>
+
+                        </tr>
+                        <tr>
+                            <td>Otros</td>
+                        </tr>
+                    <tbody>
+                </table>
             </div>
         </section>
 
@@ -62,34 +111,111 @@
         </section>
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <div class="col">
+            <div class="col animate__fadeInDown">
                 <div class="card shadow-sm">
                     <img src="./img/1boulevardier.jpg" class="img-thumbnail" alt="...">
-                    <div class="card-body">
+                    <div class="card-body cardsleeve">
                         <p class="lead text-center">Boulevardier</p>
                     </div>
                 </div>
             </div>
-            <div class="col">
+
+            <div class="col animate__fadeInDown">
                 <div class="card shadow-sm">
                     <img src="./img/6drymartini.jpg" class="img-thumbnail" alt="...">
-
-                    <div class="card-body">
+                    <div class="card-body cardsleeve">
                         <p class="lead text-center">Dry martini</p>
                     </div>
                 </div>
             </div>
-            <div class="col">
+            <div class="col animate__fadeInDown">
                 <div class="card shadow-sm">
                     <img src="./img/3americano.jpg" class="img-thumbnail" alt="...">
 
-                    <div class="card-body">
+                    <div class="card-body cardsleeve">
                         <p class="lead text-center">Americano</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col animate__fadeInDown">
+                <div class="card shadow-sm">
+                    <img src="./img/4caipirinha.jpg" class="img-thumbnail" alt="...">
+
+                    <div class="card-body cardsleeve">
+                        <p class="lead text-center">Caipirinha</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col animate__fadeInDown">
+                <div class="card shadow-sm">
+                    <img src="./img/5cubalibre.jpg" class="img-thumbnail" alt="...">
+
+                    <div class="card-body cardsleeve">
+                        <p class="lead text-center">Cuba Libre</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col animate__fadeInDown">
+                <div class="card shadow-sm">
+                    <img src="./img/2bloodymary.jpg" class="img-thumbnail" alt="...">
+
+                    <div class="card-body cardsleeve">
+                        <p class="lead text-center">Bloody Mary</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+    <section class="py-5 text-center container">
+        <div class="row py-lg-5">
+            <div class="col-lg-6 col-md-8 mx-auto">
+                <h1 class="fw-light">Noticias</h1>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="row mb-2">
+                <div class="col-md-6">
+                    <div
+                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 cardtext">World</strong>
+                            <h3 class="mb-0">Featured post</h3>
+                            <div class="mb-1 text-muted">Nov 12</div>
+                            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
+                                lead-in to additional content.</p>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <title>Placeholder</title>
+                            <img src="./img/thumb2.png">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div
+                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        <div class="col p-4 d-flex flex-column position-static">
+                            <strong class="d-inline-block mb-2 cardtext">Design</strong>
+                            <h3 class="mb-0">Post title</h3>
+                            <div class="mb-1 text-muted">Nov 11</div>
+                            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
+                                additional content.</p>
+                        </div>
+                        <div class="col-auto d-none d-lg-block">
+                            <title>Placeholder</title>
+                            <img src="./img/thumb1.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
     <div class="container">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
@@ -110,101 +236,17 @@
     </div>
     </div>
 
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Noticias</h1>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="container">
-            <div class="row mb-2">
-                <div class="col-md-6">
-                    <div
-                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                        <div class="col p-4 d-flex flex-column position-static">
-                            <strong class="d-inline-block mb-2 text-primary">World</strong>
-                            <h3 class="mb-0">Featured post</h3>
-                            <div class="mb-1 text-muted">Nov 12</div>
-                            <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
-                                lead-in to additional content.</p>
-                            <a href="#" class="stretched-link">Continue reading</a>
-                        </div>
-                        <div class="col-auto d-none d-lg-block">
-                            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-                                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                                focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-                                    fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div
-                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                        <div class="col p-4 d-flex flex-column position-static">
-                            <strong class="d-inline-block mb-2 text-success">Design</strong>
-                            <h3 class="mb-0">Post title</h3>
-                            <div class="mb-1 text-muted">Nov 11</div>
-                            <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                                additional content.</p>
-                            <a href="#" class="stretched-link">Continue reading</a>
-                        </div>
-                        <div class="col-auto d-none d-lg-block">
-                            <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg"
-                                role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice"
-                                focusable="false">
-                                <title>Placeholder</title>
-                                <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%"
-                                    fill="#eceeef" dy=".3em">Thumbnail</text>
-                            </svg>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
     <div class="container">
         <footer class="py-5">
             <div class="row">
-                <div class="col-2">
-                    <h5>Section</h5>
+                <div class="col-7">
+                    <h5>Secciones</h5>
                     <ul class="nav flex-column">
                         <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-2">
-                    <h5>Section</h5>
-                    <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
-                    </ul>
-                </div>
-
-                <div class="col-2">
-                    <h5>Section</h5>
-                    <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Pricing</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">About</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Buscador</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Articulos</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Noticias</a></li>
+                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Sobre nosotros</a></li>
                     </ul>
                 </div>
 
@@ -213,8 +255,8 @@
                         <h5>Suscribite a nuestro newsletter</h5>
                         <div class="d-flex w-100 gap-2">
                             <label for="newsletter1" class="visually-hidden">Direccion de Email</label>
-                            <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-                            <button class="btn btn-primary" type="button">Suscribirse</button>
+                            <input id="newsletter1" type="text" class="form-control" placeholder="Direccion del Email">
+                            <button class="btn btn-primary boton" type="button">Suscribirse</button>
                         </div>
                     </form>
                 </div>
