--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/main.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="../img/coctel.png">
 </head>
 
@@ -44,11 +44,11 @@
         </div>
 
 
-        <section class="py-5 text-center container">
+        <section class="py-5 text-center container my-5 separador">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Buscador de cocteles</h1>
-                    <p class="lead text-muted">Buscar cocteles por ingredientes ,sabores ,temporadas, etc.</p>
+                    <p class="lead">Buscar cocteles por ingredientes ,sabores ,temporadas, etc.</p>
                 </div>
             </div>
         </section>
@@ -101,7 +101,7 @@
             </div>
         </section>
 
-        <section class="py-5 text-center container">
+        <section class="py-5 text-center container my-5 separador">
             <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
                     <h1 class="fw-light">Cocteles mas populares</h1>
@@ -110,62 +110,65 @@
             </div>
         </section>
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <div class="col animate__fadeInDown">
-                <div class="card shadow-sm">
-                    <img src="./img/1boulevardier.jpg" class="img-thumbnail" alt="...">
-                    <div class="card-body cardsleeve">
-                        <p class="lead text-center">Boulevardier</p>
+        <div class="container">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                <div class="col animate__fadeInDown">
+                    <div class="card shadow-sm">
+                        <img src="./img/1boulevardier.jpg" class="img-thumbnail" alt="...">
+                        <div class="card-body cardsleeve">
+                            <p class="lead text-center">Boulevardier</p>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="col animate__fadeInDown">
-                <div class="card shadow-sm">
-                    <img src="./img/6drymartini.jpg" class="img-thumbnail" alt="...">
-                    <div class="card-body cardsleeve">
-                        <p class="lead text-center">Dry martini</p>
+                <div class="col animate__fadeInDown">
+                    <div class="card shadow-sm">
+                        <img src="./img/6drymartini.jpg" class="img-thumbnail" alt="...">
+                        <div class="card-body cardsleeve">
+                            <p class="lead text-center">Dry martini</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col animate__fadeInDown">
-                <div class="card shadow-sm">
-                    <img src="./img/3americano.jpg" class="img-thumbnail" alt="...">
+                <div class="col animate__fadeInDown">
+                    <div class="card shadow-sm">
+                        <img src="./img/3americano.jpg" class="img-thumbnail" alt="...">
 
-                    <div class="card-body cardsleeve">
-                        <p class="lead text-center">Americano</p>
+                        <div class="card-body cardsleeve">
+                            <p class="lead text-center">Americano</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col animate__fadeInDown">
-                <div class="card shadow-sm">
-                    <img src="./img/4caipirinha.jpg" class="img-thumbnail" alt="...">
+                <div class="col animate__fadeInDown">
+                    <div class="card shadow-sm">
+                        <img src="./img/4caipirinha.jpg" class="img-thumbnail" alt="...">
 
-                    <div class="card-body cardsleeve">
-                        <p class="lead text-center">Caipirinha</p>
+                        <div class="card-body cardsleeve">
+                            <p class="lead text-center">Caipirinha</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col animate__fadeInDown">
-                <div class="card shadow-sm">
-                    <img src="./img/5cubalibre.jpg" class="img-thumbnail" alt="...">
+                <div class="col animate__fadeInDown">
+                    <div class="card shadow-sm">
+                        <img src="./img/5cubalibre.jpg" class="img-thumbnail" alt="...">
 
-                    <div class="card-body cardsleeve">
-                        <p class="lead text-center">Cuba Libre</p>
+                        <div class="card-body cardsleeve">
+                            <p class="lead text-center">Cuba Libre</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col animate__fadeInDown">
-                <div class="card shadow-sm">
-                    <img src="./img/2bloodymary.jpg" class="img-thumbnail" alt="...">
+                <div class="col animate__fadeInDown">
+                    <div class="card shadow-sm">
+                        <img src="./img/2bloodymary.jpg" class="img-thumbnail" alt="...">
 
-                    <div class="card-body cardsleeve">
-                        <p class="lead text-center">Bloody Mary</p>
+                        <div class="card-body cardsleeve">
+                            <p class="lead text-center">Bloody Mary</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 
 
     <section class="py-5 text-center container">
@@ -181,7 +184,7 @@
             <div class="row mb-2">
                 <div class="col-md-6">
                     <div
-                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
                             <strong class="d-inline-block mb-2 cardtext">World</strong>
                             <h3 class="mb-0">Featured post</h3>
@@ -197,7 +200,7 @@
                 </div>
                 <div class="col-md-6">
                     <div
-                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
                             <strong class="d-inline-block mb-2 cardtext">Design</strong>
                             <h3 class="mb-0">Post title</h3>
@@ -212,7 +215,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 
