--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </header>
         <div class="nav-scroller py-1 mb-2">
             <nav class="nav d-flex justify-content-between navbar mx-0">
-                <a class="p-2 link-secondary navbarbuttons" href="#">Recetas</a>
-                <a class="p-2 link-secondary navbarbuttons" href="#">Noticias</a>
-                <a class="p-2 link-secondary navbarbuttons" href="#">Articulos</a>
-                <a class="p-2 link-secondary navbarbuttons" href="#">Los basicos</a>
-                <a class="p-2 link-secondary navbarbuttons" href="#">Sobre nosotros</a>
+                <a class="p-2 link-secondary navbarbuttons" href="./pages/drinks/drink.html">Recetas</a>
+                <a class="p-2 link-secondary navbarbuttons" href="./pages/news/noticia.html">Noticias</a>
+                <a class="p-2 link-secondary navbarbuttons" href="./pages/search.html">Busqueda</a>
+                <a class="p-2 link-secondary navbarbuttons" href="./pages/contactus.html">Contacto</a>
+                <a class="p-2 link-secondary navbarbuttons" href="./pages/aboutus.html">Sobre nosotros</a>
             </nav>
         </div>
         <div class="p-4 p-md-5 mb-4 text-white rounded banner">
@@ -99,6 +99,11 @@
                     <tbody>
                 </table>
             </div>
+            <div class="container-fluid p-5">
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <button class="btn btn-primary btn-lg boton" type="button"><i class="bi bi-search"></i>Usar el buscador</button>
+                </div>                  
+            </div>
         </section>
 
         <section class="py-5 text-center container my-5 separador">
@@ -111,7 +116,7 @@
         </section>
 
         <div class="container">
-            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 ">
                 <div class="col animate__fadeInDown">
                     <div class="card shadow-sm">
                         <img src="./img/1boulevardier.jpg" class="img-thumbnail" alt="...">
@@ -121,7 +126,7 @@
                     </div>
                 </div>
 
-                <div class="col animate__fadeInDown">
+                <div class="col wow bounceInUp">
                     <div class="card shadow-sm">
                         <img src="./img/6drymartini.jpg" class="img-thumbnail" alt="...">
                         <div class="card-body cardsleeve">
@@ -171,10 +176,11 @@
 
 
 
-    <section class="py-5 text-center container">
+    <section class="py-5 text-center container my-5 separador">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Noticias</h1>
+                <p class="lead text-muted">Ultimas noticias sobre la cultura y el mundo de la cocteleriaSS.</p>
             </div>
         </div>
     </section>
@@ -186,7 +192,7 @@
                     <div
                         class="row g-0 border rounded overflow-hidden flex-md-row mb-4 h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
-                            <strong class="d-inline-block mb-2 cardtext">World</strong>
+                            <strong class="d-inline-block mb-2 cardtext">Noticia</strong>
                             <h3 class="mb-0">Featured post</h3>
                             <div class="mb-1 text-muted">Nov 12</div>
                             <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
@@ -202,7 +208,7 @@
                     <div
                         class="row g-0 border rounded overflow-hidden flex-md-row mb-4 h-md-250 position-relative">
                         <div class="col p-4 d-flex flex-column position-static">
-                            <strong class="d-inline-block mb-2 cardtext">Design</strong>
+                            <strong class="d-inline-block mb-2 cardtext">Articulo</strong>
                             <h3 class="mb-0">Post title</h3>
                             <div class="mb-1 text-muted">Nov 11</div>
                             <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
@@ -217,25 +223,6 @@
             </div>
         </div>
     </section>
-
-    <div class="container">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-            <div class="col-10 col-sm-8 col-lg-6">
-                <img src="./img/side.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
-                    height="500" loading="lazy">
-            </div>
-            <div class="col-lg-6">
-                <h1 class="display-5 fw-bold lh-1 mb-3">Quienes somos</h1>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita impedit quis
-                    possimus, quibusdam doloribus saepe nihil recusandae vitae porro soluta facere fuga illum laudantium
-                    nobis ea officiis deleniti reprehenderit voluptates eius adipisci inventore? Vero placeat
-                    accusantium maiores aperiam, vitae nam iusto! Voluptatem doloremque, nisi a aut doloribus quis velit
-                    quia sit reiciendis obcaecati animi id fuga! Laboriosam, illo ducimus? Magni dignissimos tempora
-                    tempore earum eligendi aliquam incidunt enim, iure molestias perferendis doloribus excepturi rerum
-                    distinctio, reiciendis ullam quis hic quibusdam. Adipisci, soluta quae..</p>
-            </div>
-        </div>
-    </div>
     </div>
 
     <div class="container">
@@ -244,11 +231,11 @@
                 <div class="col-7">
                     <h5>Secciones</h5>
                     <ul class="nav flex-column">
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Home</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Buscador</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Articulos</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Noticias</a></li>
-                        <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Sobre nosotros</a></li>
+                        <li class="nav-item mb-2"><a href="./index.html" class="nav-link p-0 text-muted">Home</a></li>
+                        <li class="nav-item mb-2"><a href="./pages/search.html" class="nav-link p-0 text-muted">Buscador</a></li>
+                        <li class="nav-item mb-2"><a href="./pages/news/noticia.html" class="nav-link p-0 text-muted">Noticias</a></li>
+                        <li class="nav-item mb-2"><a href="./pages/contactus.html" class="nav-link p-0 text-muted">Contacto</a></li>
+                        <li class="nav-item mb-2"><a href="./pages/aboutus.html" class="nav-link p-0 text-muted">Sobre nosotros</a></li>
                     </ul>
                 </div>
 
@@ -267,19 +254,18 @@
             <div class="d-flex justify-content-between py-4 my-4 border-top">
                 <p>© 2022 Luca Ciriaco, hecho para Coderhouse.</p>
                 <ul class="list-unstyled d-flex">
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
-                                <use xlink:href="#twitter"></use>
-                            </svg></a></li>
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
-                                <use xlink:href="#instagram"></use>
-                            </svg></a></li>
-                    <li class="ms-3"><a class="link-dark" href="#"><svg class="bi" width="24" height="24">
-                                <use xlink:href="#facebook"></use>
-                            </svg></a></li>
+                    <li class="ms-3"><a class="social-fb" href="https://www.facebook.com/">Facebook</a></li>
+                    <li class="ms-3"><a class="social-ig" href="https://www.instagram.com/">Instagram</a></li>
+                    <li class="ms-3"><a class="social-yt" href="https://www.youtube.com/">Youtube</a></li>
+                    <li class="ms-3"><a class="social-tw" href="https://twitter.com/">Twitter</a></li>
                 </ul>
             </div>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="./wow.min.js"></script>
+    <script>new WOW().init();</script>
+
 </body>
 
 </html>
